--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.75.2",
     "firebase": "^11.6.1",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
