--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.75.2",
+    "axios": "^1.9.0",
     "firebase": "^11.6.1",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
